--- a/webapp-iac/Jenkinsfile
+++ b/webapp-iac/Jenkinsfile
@@ -2,129 +2,108 @@ pipeline {
   agent any
 
   parameters {
-    choice(name: 'ENV', choices: ['dev', 'staging', 'prod'], description: 'Select environment')
-    choice(name: 'ACTION', choices: ['APPLY', 'DESTROY'], description: 'Apply or Destroy infra')
+    choice(name: 'ENV', choices: ['dev', 'staging', 'prod'], description: 'Select Environment')
+    choice(name: 'ACTION', choices: ['apply', 'destroy'], description: 'Select Terraform Action')
   }
 
   environment {
-    AWS_CRED  = 'aws-dev-iam'               // Jenkins credential ID
-    AWS_REGION = 'ap-south-1'
-    ENV_DIR   = "webapp-iac/envs/${params.ENV}"
-    VAR_FILE  = "${params.ENV}.tfvars"
+    AWS_CREDENTIALS = "aws-creds"
+    REGION = "ap-south-1"
+    BASE_DIR = "webapp-iac/envs"
   }
 
   stages {
 
-    stage('Show Selection') {
+    stage("Show Selection") {
       steps {
-        echo """
-        ✅ Environment : ${params.ENV}
-        🔧 Action      : ${params.ACTION}
-        📂 Directory   : ${ENV_DIR}
-        🧾 Var File    : ${VAR_FILE}
-        """
+        script {
+          echo """
+          ✅ Environment : ${ENV}
+          🔧 Action      : ${ACTION}
+          📂 Directory   : ${BASE_DIR}/${ENV}
+          🧾 Var File    : ${ENV}.tfvars
+          """
+        }
       }
     }
 
-    stage('Terraform Init + Validate') {
+    stage("Terraform Init + Validate") {
       steps {
-        withAWS(credentials: AWS_CRED, region: AWS_REGION) {
-          dir("${ENV_DIR}") {
-            sh '''
-              set -e
+        withAWS(region: "${REGION}", credentials: "${AWS_CREDENTIALS}") {
+          dir("${BASE_DIR}/${ENV}") {
+            sh """
               terraform init
               terraform validate
-            '''
+            """
           }
         }
       }
     }
 
-    // Avoid duplicate SG create errors when APPLYing and SG already exists
-    stage('Import Existing SG (avoid duplicate SG error)') {
-      when { expression { params.ACTION == 'APPLY' } }
+    stage("Terraform Plan") {
       steps {
-        withAWS(credentials: AWS_CRED, region: AWS_REGION) {
-          dir("${ENV_DIR}") {
+        withAWS(region: "${REGION}", credentials: "${AWS_CREDENTIALS}") {
+          dir("${BASE_DIR}/${ENV}") {
+            sh """
+              terraform plan -var-file=${ENV}.tfvars -out=tfplan.bin
+            """
+          }
+        }
+      }
+    }
+
+    stage("Approval for Destroy (Safety Gate)") {
+      when { expression { params.ACTION == "destroy" } }
+      steps {
+        timeout(time: 2, unit: 'MINUTES') {
+          input(message: "⚠️ WARNING: Destroying ${ENV} environment. Proceed?")
+        }
+      }
+    }
+
+    stage("Apply / Destroy") {
+      steps {
+        withAWS(region: "${REGION}", credentials: "${AWS_CREDENTIALS}") {
+          dir("${BASE_DIR}/${ENV}") {
             script {
-              def sgName = "webapp-${params.ENV}-web-sg"
-              echo "🔎 Checking for existing SG: ${sgName}"
-              def existing = sh(script: "aws ec2 describe-security-groups --filters Name=group-name,Values=${sgName} --query SecurityGroups[0].GroupId --output text", returnStdout: true).trim()
-              if (existing != "None" && existing) {
-                echo "✅ Importing existing SG into state: ${existing}"
-                // Import may need vars; tolerate non-zero exit to keep pipeline going
-                sh "terraform import -input=false module.web.aws_security_group.web ${existing} || true"
-              } else {
-                echo "ℹ️ No existing SG found."
-              }
-            }
-          }
-        }
-      }
-    }
 
-    stage('Terraform Plan') {
-      steps {
-        withAWS(credentials: AWS_CRED, region: AWS_REGION) {
-          dir("${ENV_DIR}") {
-            sh "terraform plan -var-file=${VAR_FILE} -out=tfplan.bin"
-          }
-        }
-      }
-    }
-
-    stage('Approval for Destroy (Safety Gate)') {
-      when { expression { params.ACTION == 'DESTROY' } }
-      steps {
-        timeout(time: 60, unit: 'SECONDS') {
-          input message: "⚠️ WARNING: Destroying ${params.ENV} environment. Proceed?"
-        }
-      }
-    }
-
-    stage('Apply / Destroy') {
-      steps {
-        withAWS(credentials: AWS_CRED, region: AWS_REGION) {
-          dir("${ENV_DIR}") {
-            script {
-              if (params.ACTION == 'APPLY') {
-                sh "terraform apply -auto-approve tfplan.bin"
-              } else {
-                // ---- Robust 2-phase destroy ----
-                // Phase 1: Destroy instance(s)
+              if (ACTION == "destroy") {
+                echo "🔥 Phase 1: Destroy EC2 instance(s)..."
                 sh """
-                  set -e
-                  echo "🧹 Phase 1: Destroy instances..."
-                  terraform destroy -auto-approve -target=module.web.aws_instance.web -var-file=${VAR_FILE} || true
+                  terraform destroy -auto-approve -target=module.web.aws_instance.web -var-file=${ENV}.tfvars
                 """
 
-                // Wait until ENIs using the SG are gone (DependencyViolation workaround)
-                sh '''
-                  echo "⏳ Waiting for ENIs to detach from SG before deleting SG..."
-                  # Try to read SG ID from state; if missing, skip wait
-                  SG_ID=$(terraform state show module.web.aws_security_group.web 2>/dev/null | awk \'/^id = /{print $3}\')
-                  if [ -n "$SG_ID" ]; then
-                    for i in $(seq 1 60); do
-                      ENI=$(aws ec2 describe-network-interfaces --filters Name=group-id,Values=$SG_ID --query "NetworkInterfaces[0].NetworkInterfaceId" --output text || echo "None")
-                      if [ "$ENI" = "None" ]; then
-                        echo "✅ No ENIs attached to $SG_ID. Proceeding."
+                echo "⏳ Waiting for ENIs to detach from SG before deleting SG..."
+                sh """
+                  SG_ID=\$(terraform state show module.web.aws_security_group.web 2>/dev/null | awk '/^id =/ {print \$3}')
+                  if [ -n "\$SG_ID" ]; then
+                    echo "🔍 SG ID = \$SG_ID"
+                    for i in {1..18}; do
+                      ENI_COUNT=\$(aws ec2 describe-network-interfaces --filters "Name=group-id,Values=\$SG_ID" --region ${REGION} --query 'NetworkInterfaces' | jq length)
+                      if [ "\$ENI_COUNT" -eq 0 ]; then
+                        echo "✅ No ENIs attached — safe to delete SG."
                         break
                       fi
-                      echo "⏳ ENI still attached ($ENI). Waiting 10s... ($i/60)"
-                      sleep 10
+                      echo "⏳ ENI still attached... retrying in 20s"
+                      sleep 20
                     done
                   else
                     echo "ℹ️ SG not in state (already gone or never managed)."
                   fi
-                '''
-
-                // Phase 2: Destroy the SG
-                sh """
-                  echo "🧹 Phase 2: Destroy Security Group..."
-                  terraform destroy -auto-approve -target=module.web.aws_security_group.web -var-file=${VAR_FILE} || true
-                  echo "🧹 Final sweep: destroy anything remaining..."
-                  terraform destroy -auto-approve -var-file=${VAR_FILE} || true
                 """
+
+                echo "🧹 Phase 2: Destroy Security Group..."
+                sh """
+                  terraform destroy -auto-approve -target=module.web.aws_security_group.web -var-file=${ENV}.tfvars
+                """
+
+              } else {
+
+                echo "🚀 Applying Terraform..."
+                sh """
+                  terraform apply -auto-approve -var-file=${ENV}.tfvars
+                """
+
               }
             }
           }
@@ -136,25 +115,18 @@ pipeline {
   post {
     always {
       echo "✅ Pipeline finished."
-      // Only try to print outputs for APPLY; DESTROY has no outputs by design
+    }
+
+    success {
       script {
-        if (params.ACTION == 'APPLY') {
-          withAWS(credentials: AWS_CRED, region: AWS_REGION) {
-            dir("${ENV_DIR}") {
-              // Don’t fail the build if output is absent; print nicely if present
-              sh '''
-                IP=$(terraform output -raw web_public_ip 2>/dev/null || true)
-                if [ -n "$IP" ]; then
-                  echo "🌍 Server IP: $IP"
-                  echo "💻 SSH Command: ssh ubuntu@$IP"
-                else
-                  echo "ℹ️ No web_public_ip output available yet."
-                fi
-              '''
+        if (ACTION == "apply") {
+          withAWS(region: "${REGION}", credentials: "${AWS_CREDENTIALS}") {
+            dir("${BASE_DIR}/${ENV}") {
+              def ip = sh(script: "terraform output -raw web_public_ip || echo 'N/A'", returnStdout: true).trim()
+              echo "🌍 Server Public IP: ${ip}"
+              echo "💻 SSH Command: ssh ubuntu@${ip}"
             }
           }
-        } else {
-          echo "🧹 Destroy completed. Skipping outputs."
         }
       }
     }
