--- a/webapp-iac/Jenkinsfile
+++ b/webapp-iac/Jenkinsfile
@@ -7,9 +7,9 @@ pipeline {
   }
 
   environment {
-    AWS_CREDENTIALS = "aws-dev-iam"     // ✅ your real Jenkins credential ID
-    REGION = "ap-south-1"
-    BASE_DIR = "webapp-iac/envs"
+    AWS_CREDENTIALS = "aws-dev-iam"   // <-- your Jenkins credential ID
+    REGION          = "ap-south-1"
+    BASE_DIR        = "webapp-iac/envs"
   }
 
   stages {
@@ -41,12 +41,47 @@ pipeline {
       }
     }
 
-    stage("Terraform Plan") {
+    stage("Terraform Plan (with SG self-heal)") {
       steps {
         withAWS(region: "${REGION}", credentials: "${AWS_CREDENTIALS}") {
           dir("${BASE_DIR}/${ENV}") {
+            // --- Preflight: import existing SG to avoid InvalidGroup.Duplicate ---
             sh """
               set -e
+
+              SG_NAME="webapp-${ENV}-web-sg"
+
+              # Try to read VPC and Subnet from tfvars (both optional in case your module derives them)
+              VPC_ID=\$(awk -F= '/^\\s*vpc_id\\s*=/{print \$2}' ${ENV}.tfvars | tr -d ' "')
+              SUBNET_ID=\$(awk -F= '/^\\s*subnet_id\\s*=/{print \$2}' ${ENV}.tfvars | tr -d ' "')
+
+              if [ -z "\$VPC_ID" ] && [ -n "\$SUBNET_ID" ]; then
+                echo "ℹ️ vpc_id not found in tfvars; deriving from subnet \$SUBNET_ID"
+                VPC_ID=\$(aws ec2 describe-subnets --subnet-ids "\$SUBNET_ID" --region ${REGION} --query 'Subnets[0].VpcId' --output text 2>/dev/null || true)
+              fi
+
+              if [ -n "\$VPC_ID" ]; then
+                EXISTING_SG=\$(aws ec2 describe-security-groups \
+                  --region ${REGION} \
+                  --filters "Name=vpc-id,Values=\$VPC_ID" "Name=group-name,Values=\$SG_NAME" \
+                  --query 'SecurityGroups[0].GroupId' --output text 2>/dev/null || true)
+
+                if [ "\$EXISTING_SG" != "None" ] && [ -n "\$EXISTING_SG" ]; then
+                  echo "🔎 Found existing SG \$SG_NAME in \$VPC_ID: \$EXISTING_SG"
+                  if ! terraform state show module.web.aws_security_group.web >/dev/null 2>&1; then
+                    echo "📥 Importing SG into Terraform state..."
+                    terraform import 'module.web.aws_security_group.web' "\$EXISTING_SG" || true
+                  else
+                    echo "ℹ️ SG already tracked in state."
+                  fi
+                else
+                  echo "✅ No pre-existing SG named \$SG_NAME in VPC \$VPC_ID"
+                fi
+              else
+                echo "ℹ️ Could not determine VPC_ID (no vpc_id/subnet_id in tfvars). Skipping SG pre-import."
+              fi
+
+              # Now generate a fresh plan that reflects any import we just did
               terraform plan -var-file=${ENV}.tfvars -out=tfplan.bin
             """
           }
@@ -68,24 +103,26 @@ pipeline {
         withAWS(region: "${REGION}", credentials: "${AWS_CREDENTIALS}") {
           dir("${BASE_DIR}/${ENV}") {
             script {
-
               if (ACTION == "destroy") {
                 echo "🔥 Starting Safe Destroy sequence..."
 
-                // ✅ Phase 1: Destroy EC2 instance(s)
+                // Phase 1: Destroy EC2 instance(s)
                 sh """
+                  set -e
                   echo "🧹 Phase 1: Destroying EC2 instance(s)..."
                   terraform destroy -auto-approve -target=module.web.aws_instance.web -var-file=${ENV}.tfvars || echo "⚠️ Instance destroy skipped (not found)"
                 """
 
-                // ✅ Phase 2: Wait for ENIs to detach from SG
+                // Phase 2: Wait for ENIs to detach from SG (best-effort)
                 sh """
+                  set +e
                   echo "⏳ Checking for attached ENIs..."
                   SG_ID=\$(terraform state show module.web.aws_security_group.web 2>/dev/null | awk '/^id =/ {print \$3}')
                   if [ -n "\$SG_ID" ]; then
                     echo "🔍 Found SG ID: \$SG_ID"
                     for i in {1..18}; do
-                      ENI_COUNT=\$(aws ec2 describe-network-interfaces --filters "Name=group-id,Values=\$SG_ID" --region ${REGION} --query 'NetworkInterfaces' | jq length)
+                      ENI_COUNT=\$(aws ec2 describe-network-interfaces --filters "Name=group-id,Values=\$SG_ID" --region ${REGION} --query 'NetworkInterfaces' | jq length 2>/dev/null)
+                      if [ -z "\$ENI_COUNT" ]; then ENI_COUNT=0; fi
                       if [ "\$ENI_COUNT" -eq 0 ]; then
                         echo "✅ ENIs detached — safe to delete SG"
                         break
@@ -98,8 +135,9 @@ pipeline {
                   fi
                 """
 
-                // ✅ Phase 3: Destroy the SG safely (with retries)
+                // Phase 3: Destroy SG with retries
                 sh """
+                  set +e
                   echo "🧹 Phase 3: Destroying Security Group..."
                   for i in {1..3}; do
                     terraform destroy -auto-approve -target=module.web.aws_security_group.web -var-file=${ENV}.tfvars && break || echo "⚠️ Retry SG destroy (attempt \$i)..."
@@ -107,15 +145,18 @@ pipeline {
                   done
                 """
 
-                // ✅ Phase 4: Final cleanup (ensure all gone)
+                // Phase 4: Final cleanup
                 sh """
+                  set +e
                   terraform destroy -auto-approve -var-file=${ENV}.tfvars || echo "✅ Cleanup complete or already destroyed"
                 """
 
               } else {
                 echo "🚀 Applying Terraform configuration..."
+                // Apply the exact plan created in Plan stage
                 sh """
-                  terraform apply -auto-approve -var-file=${ENV}.tfvars
+                  set -e
+                  terraform apply -auto-approve tfplan.bin
                 """
               }
             }
@@ -129,7 +170,6 @@ pipeline {
     always {
       echo "✅ Pipeline finished."
     }
-
     success {
       script {
         if (ACTION == "apply") {
@@ -143,7 +183,6 @@ pipeline {
         }
       }
     }
-
     failure {
       echo "❌ Pipeline failed — check above logs for Terraform or AWS errors."
     }
